ajustes responsive cards

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="">
                         <h2>Lorem ipsum dolor sit amettt</h2>
-                        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem consectetur
-                            laboriosam dolores ratione! Natus at repellendus ullam quae vitae a aut! Quod iure nesciunt
-                            cupiditate necessitatibus quis? Facilis aspernatur labore voluptate iste obcaecati totam,
-                            quia non voluptates nostrum? Magnam, mollitia aut enim ducimus praesentium quo nulla quod
-                            totam dolor.</P>
+                        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem
+                            consecteturlaboriosam dolores ratione! Natus at repellendus ullam quae vitae a aut! Quod
+                            iure nesciuntcupiditate necessitatibus quis? Facilis aspernatur labore voluptate iste
+                            obcaecati totam, quia non voluptates nostrum? Magnam, mollitia aut enim ducimus praesentium
+                            quo nulla quod otam dolor.</P>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12">
@@ -109,58 +109,42 @@
         <section class="container mt-5 mb-5">
             <div class="row">
                 <h3>Lorem ipsum dolor sit amettt</h3>
-                <div class=" col-xs-12 col-sm-12 col-md-3 col-3">
-                    <div class="card">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6 ">
+                    <div class="card ">
                         <img src="./assets/images/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3">
-                    <div class="card">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                    <div class="card ">
                         <img src="./assets/images/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="./assets/images/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
-                </div>
-                <div class="col-3 col-sm-12 col-md-3">
+                </div> 
+                <div class="pb-5 col-lg-3 col-md-6  col-ms-6">
                     <div class="card">
                         <img src="./assets/images/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
