ajuste responsive e indetado

--- a/pages/services.html
+++ b/pages/services.html
@@ -59,114 +59,90 @@
         <section class=" card_items container mt-5 mb-5">
             <div class="row">
                 <h3>Lorem ipsum dolor sit amettt</h3>
-                <div class=" col-xs-12 col-sm-12 col-md-3 col-3 mb-5">
+                <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 mb-5">
+                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of
-                                the
-                                card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
