pseudo clases en about index y css

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             quo nulla quod otam dolor.</P>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class=" hover_card col-md-6 col-sm-12">
                     <img src="./assets/images/images/agency_office.jpg"
                         class="shadow p-3 mb-5 bg-body-tertiary rounded img-fluid rounded mx-auto d-block "
                         alt="agency_office">
@@ -109,10 +109,10 @@
         <section class="container mt-5 mb-5">
             <div class="row">
                 <h3>Lorem ipsum dolor sit amettt</h3>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6 ">
-                    <div class="card ">
+                <div class="  pb-5 col-lg-3 col-md-6 col-ms-6 ">
+                    <div class="card">
                         <img src="./assets/images/images/service_1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body ">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
