--- a/pages/about.html
+++ b/pages/about.html
@@ -48,10 +48,10 @@
         </div>
         <div class="container">
             <div class="  row justify-conter-center align-items-center">
-                <div class=" p-3  col-md-6 col-sm-12">
+                <div class=" hover_card p-3 col-md-6 col-sm-12">
                     <img src="../assets/images/images/about_bg.jpg" alt="people_working">
                 </div>
-                <div class="  col-md-6 col-sm-12">
+                <div class="  col-md-6 col-sm-12 p-5">
                     <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum possimus distinctio minus
