--- a/index.html
+++ b/index.html
@@ -10,36 +10,39 @@
     <title>Preentrega 2-Index</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<!-- Navbar-->
-<nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="./assets/images/images/log.png" alt="Bootstrap" width="150" height="50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <body>
+    <!-- Navbar-->
+    <header>
+        <nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./assets/images/logo.png" alt="Bootstrap">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
         <!-- Carusel-->
         <div id="carouselExampleCaptions" class=" carrousel_index carousel slide">
@@ -53,21 +56,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/images/banner_index_1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/images/banner_index_2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/images/banner_index_3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -99,7 +102,7 @@
                     </div>
                 </div>
                 <div class=" hover_card col-md-6 col-sm-12">
-                    <img src="./assets/images/images/agency_office.jpg"
+                    <img src="./assets/images/agency_office.jpg"
                         class="shadow p-3 mb-5 bg-body-tertiary rounded img-fluid rounded mx-auto d-block "
                         alt="agency_office">
                 </div>
@@ -111,40 +114,44 @@
                 <h3>Lorem ipsum dolor sit amettt</h3>
                 <div class="  pb-5 col-lg-3 col-md-6 col-ms-6 ">
                     <div class="card">
-                        <img src="./assets/images/images/service_1.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body ">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card ">
-                        <img src="./assets/images/images/service_2.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="./assets/images/images/service_3.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
-                </div> 
+                </div>
                 <div class="pb-5 col-lg-3 col-md-6  col-ms-6">
                     <div class="card">
-                        <img src="./assets/images/images/service_4.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -181,7 +188,7 @@
         </section>
     </main>
     <!-- Footer-->
-    <section class="container-fluid footer mt-5">
+    <footer class="container-fluid footer mt-5">
         <section class=" footer_site container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
@@ -218,7 +225,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
