--- a/pages/about.html
+++ b/pages/about.html
@@ -10,36 +10,40 @@
     <title>Prentrega 2-About</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<!-- Navbar-->
-<nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../assets/images/images/log.png" alt="Bootstrap" width="150" height="50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link " href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=".">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+
 
 <body>
+    <!-- Navbar-->
+    <header>
+        <nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../assets/images/logo.png" alt="Bootstrap">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href=".">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <Section class="container align-items-center">
         <div class="row">
             <div class=" container_information col-md-12">
@@ -49,7 +53,7 @@
         <div class="container">
             <div class="  row justify-conter-center align-items-center">
                 <div class=" hover_card p-3 col-md-6 col-sm-12">
-                    <img src="../assets/images/images/about_bg.jpg" alt="people_working">
+                    <img src="../assets/images/about_bg.jpg" alt="people_working">
                 </div>
                 <div class="  col-md-6 col-sm-12 p-5">
                     <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -68,7 +72,7 @@
 
     </Section>
     <!-- Footer-->
-    <section class="container-fluid footer mt-5">
+    <footer class="container-fluid footer mt-5">
         <section class=" footer_site container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
@@ -105,7 +109,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
