--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,36 +9,39 @@
     <title>Prentrega 2-Services_contact</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<!-- Navbar-->
-<nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../assets/images/images/log.png" alt="Bootstrap" width="150" height="50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link " href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <body>
+    <!-- Navbar-->
+    <header>
+        <nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../assets/images/logo.png" alt="Bootstrap" >
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <section class="contact_info container">
         <div class="row justify-conter-center align-items-center">
             <div class="col-md-6 col-sm-12 pb-5">
@@ -51,21 +54,21 @@
             </div>
             <form class="col-md-6 col-sm-12 pb-5">
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email address</label>
+                    <input type="email" class="form-control" id="email_address" placeholder="name@example.com" name="email">
+                    <label for="email_address">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Phone number</label>
+                    <input type="email" class="form-control" id="phone_number" placeholder="name@example.com" name="phone">
+                    <label for="phone_number">Phone number</label>
                 </div>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                        style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">Comments</label>
+                    <textarea class="form-control" placeholder="Leave a comment here" id="text_comments"
+                        style="height: 100px" name="comments"></textarea>
+                    <label for="text_comments">Comments</label>
                 </div>
                 <div class="mb-3 form-check pb-3 pt-2">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <input type="checkbox" class="form-check-input" id="accept_ckeck_box">
+                    <label class="form-check-label" for="accept_ckeck_box">Accept</label>
                 </div>
                 <button type="submit" class="btn btn-outline-secondary w-100">Submit</button>
             </form>
@@ -74,7 +77,7 @@
 
     </section>
     <!-- Footer-->
-    <section class="container-fluid footer mt-5">
+    <footer class="container-fluid footer mt-5">
         <section class=" footer_site container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
@@ -111,7 +114,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
