--- a/pages/services.html
+++ b/pages/services.html
@@ -10,36 +10,39 @@
     <title>Prentrega 2-Services</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<!-- Navbar-->
-<nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../assets/images/images/log.png" alt="Bootstrap" width="150" height="50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link " href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <body>
+    <!-- Navbar-->
+    <header>
+        <nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../assets/images/logo.png" alt="Bootstrap">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <section class=" container pt-3 mt-5">
         <div class=" service_info row justify-conter-center align-items-center text-center">
             <div class="col mt-3">
@@ -61,7 +64,7 @@
                 <h3>Lorem ipsum dolor sit amettt</h3>
                 <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_1.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -72,7 +75,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_2.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -83,7 +86,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_3.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -94,7 +97,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_4.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -105,7 +108,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_5.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -116,7 +119,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_1.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -127,7 +130,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_2.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -138,7 +141,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="../assets/images/images/service_3.jpg" class="card-img-top" alt="...">
+                        <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -151,7 +154,7 @@
         </section>
     </section>
     <!-- Footer-->
-    <section class="container-fluid footer mt-5">
+    <footer class="container-fluid footer mt-5">
         <section class=" footer_site container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
@@ -188,7 +191,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
