--- a/pages/about.html
+++ b/pages/about.html
@@ -8,14 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Prentrega 2-About</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 
 <body>
     <!-- Navbar-->
     <header>
-        <nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../assets/images/logo.png" alt="Bootstrap">
@@ -47,23 +47,22 @@
     <Section class="container align-items-center">
         <div class="row">
             <div class=" container_information col-md-12">
-                <h1>Lorem Ipsum</h1>
+
             </div>
         </div>
         <div class="container">
+            <h1>Nosotros</h1>
             <div class="  row justify-conter-center align-items-center">
                 <div class=" hover_card p-3 col-md-6 col-sm-12">
-                    <img src="../assets/images/about_bg.jpg" alt="people_working">
+                    <img src="../assets/images/about_bg.jpg" class="img-fluid" alt="people_working">
                 </div>
-                <div class="  col-md-6 col-sm-12 p-5">
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                <div class="  col-md-6 col-sm-12 p-3">
+                    <h2>En Av creativos, nos apasiona el diseño en todas sus formas.</h2>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum possimus distinctio minus
-                        exercitationem totam magni optio repellendus, nesciunt nostrum. Non amet blanditiis
-                        reprehenderit sint odit, laboriosam minima? Error sint, illo dignissimos sunt repellat natus
-                        voluptatibus voluptate, eos temporibus incidunt iste ducimus quae hic. Molestias temporibus vero
-                        officia placeat illum facilis veritatis necessitatibus delectus, quo quaerat, cumque nam quam
-                        aliquam in voluptas possimus eum. Et molestiae aliquid similique impedit corrupti reiciendis.
+                        Con un equipo de talentosos diseñadores y desarrolladores, nos esforzamos por ofrecer soluciones
+                        innovadoras y creativas que superen las expectativas de nuestros clientes. Nuestra experiencia y
+                        compromiso con la excelencia nos distinguen en el campo del diseño. ¡Únete a nosotros en este
+                        viaje creativo!
                     </p>
                 </div>
 
@@ -73,44 +72,43 @@
     </Section>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class=" footer_site container text-light ">
+        <section class="  container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño Gráfico</h4>
+                        <li><a href="">Creación de folletos y volantes.</a></li>
+                        <li><a href="">Ilustraciones personalizadas.</a></li>
+                        <li><a href="">Diseño de packaging y etiquetas.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Identidad de Marca</h4>
+                        <li><a href="">Definición de la paleta de colores corporativos.</a></li>
+                        <li><a href="">Selección de tipografías y estilos de texto.</a></li>
+                        <li><a href="">Creación de elementos visuales coherentes, como iconografía y patrones.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Interfaces de Usuario (UI)</h4>
+                        <li><a href="">Creación de diseños de interfaces intuitivos y atractivos.</a></li>
+                        <li><a href="">Prototipado de interfaces para pruebas y validación de conceptos.</a></li>
+                        <li><a href="">Implementación de principios de diseño centrados en el usuario.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3 ">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Experiencia de Usuario (UX)</h4>
+                        <li><a href="">Mapas de experiencia de usuario.</a></li>
+                        <li><a href="">Diseño de arquitectura de la información.</a></li>
+                        <li><a href="">Evaluación de la usabilidad y pruebas de usuario.</a></li>
                     </ul>
                 </div>
             </div>
         </section>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
