--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Preentrega 2-Index</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- Navbar-->
     <header>
-        <nav class="navbar sticky-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top shadow-sm p-3 mb-0 navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./assets/images/logo.png" alt="Bootstrap">
@@ -93,12 +93,10 @@
             <div class="row justify-conter-center align-items-center">
                 <div class="col-md-6 col-sm-12">
                     <div class="">
-                        <h2>Lorem ipsum dolor sit amettt</h2>
-                        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem
-                            consecteturlaboriosam dolores ratione! Natus at repellendus ullam quae vitae a aut! Quod
-                            iure nesciuntcupiditate necessitatibus quis? Facilis aspernatur labore voluptate iste
-                            obcaecati totam, quia non voluptates nostrum? Magnam, mollitia aut enim ducimus praesentium
-                            quo nulla quod otam dolor.</P>
+                        <h2>Bienvenido a AV agencia creativa</h2>
+                        <P>Somos tu destino creativo para todo lo relacionado con diseño. Desde la conceptualización
+                            hasta la implementación, estamos aquí para convertir tus ideas en realidad. Explora nuestro
+                            sitio y descubre cómo podemos hacer que tus proyectos cobren vida.</P>
                     </div>
                 </div>
                 <div class=" hover_card col-md-6 col-sm-12">
@@ -111,12 +109,12 @@
         <!-- Services card-->
         <section class="container mt-5 mb-5">
             <div class="row">
-                <h3>Lorem ipsum dolor sit amettt</h3>
+                <h3>Nuestros servicios</h3>
                 <div class="  pb-5 col-lg-3 col-md-6 col-ms-6 ">
                     <div class="card">
                         <img src="./assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body ">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Diseño gráfico</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
@@ -127,7 +125,7 @@
                     <div class="card ">
                         <img src="./assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Diseño de logotipos</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
@@ -138,7 +136,7 @@
                     <div class="card">
                         <img src="./assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Identidad de marca</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
@@ -149,7 +147,7 @@
                     <div class="card">
                         <img src="./assets/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Diseño de sitios web</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
@@ -175,12 +173,8 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <div>
-                        <h2>Lorem ipsum dolor sit amettt</h2>
-                        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolorem consectetur
-                            laboriosam dolores ratione! Natus at repellendus ullam quae vitae a aut! Quod iure nesciunt
-                            cupiditate necessitatibus quis? Facilis aspernatur labore voluptate iste obcaecati totam,
-                            quia non voluptates nostrum? Magnam, mollitia aut enim ducimus praesentium quo nulla quod
-                            totam dolor.</P>
+                        <h2>En Av creativos, nos apasiona el diseño en todas sus formas.</h2>
+                        <P>Con un equipo de talentosos diseñadores y desarrolladores, nos esforzamos por ofrecer soluciones innovadoras y creativas que superen las expectativas de nuestros clientes. Nuestra experiencia y compromiso con la excelencia nos distinguen en el campo del diseño. ¡Únete a nosotros en este viaje creativo!.</P>
                     </div>
                 </div>
                 <div class="col-md-2"></div>
@@ -189,38 +183,38 @@
     </main>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class=" footer_site container text-light ">
+        <section class="  container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño Gráfico</h4>
+                        <li><a href="">Creación de folletos y volantes.</a></li>
+                        <li><a href="">Ilustraciones personalizadas.</a></li>
+                        <li><a href="">Diseño de packaging y etiquetas.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Identidad de Marca</h4>
+                        <li><a href="">Definición de la paleta de colores corporativos.</a></li>
+                        <li><a href="">Selección de tipografías y estilos de texto.</a></li>
+                        <li><a href="">Creación de elementos visuales coherentes, como iconografía y patrones.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Interfaces de Usuario (UI)</h4>
+                        <li><a href="">Creación de diseños de interfaces intuitivos y atractivos.</a></li>
+                        <li><a href="">Prototipado de interfaces para pruebas y validación de conceptos.</a></li>
+                        <li><a href="">Implementación de principios de diseño centrados en el usuario.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3 ">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Experiencia de Usuario (UX)</h4>
+                        <li><a href="">Mapas de experiencia de usuario.</a></li>
+                        <li><a href="">Diseño de arquitectura de la información.</a></li>
+                        <li><a href="">Evaluación de la usabilidad y pruebas de usuario.</a></li>
                     </ul>
                 </div>
             </div>
