--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,16 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Prentrega 2-Services_contact</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- Navbar-->
     <header>
-        <nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/images/logo.png" alt="Bootstrap" >
+                    <img src="../assets/images/logo.png" alt="Bootstrap">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -45,20 +45,22 @@
     <section class="contact_info container">
         <div class="row justify-conter-center align-items-center">
             <div class="col-md-6 col-sm-12 pb-5">
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, eum?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsa impedit asperiores quae
-                    molestias, quod aspernatur? Natus dolores ipsam error at odio? In ipsam, earum illo sint maiores
-                    minus culpa unde, delectus adipisci atque ad aspernatur est libero reprehenderit soluta quibusdam
-                    quidem, dicta quo sunt similique. Reprehenderit nobis nostrum aspernatur.
+                <h1>¿Listo para llevar tus proyectos al siguiente nivel?</h1>
+                <p>Nos encantaría escucharte! En [Nombre de tu Empresa], estamos aquí para responder a todas tus
+                    preguntas, discutir tus ideas y ayudarte a hacer realidad tus sueños creativos.
+                    Ya sea que estés interesado en nuestros servicios, tengas consultas sobre nuestros procesos o
+                    simplemente quieras saludar, estamos listos para conectarnos contigo.
                 </p>
             </div>
             <form class="col-md-6 col-sm-12 pb-5">
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="email_address" placeholder="name@example.com" name="email">
+                    <input type="email" class="form-control" id="email_address" placeholder="name@example.com"
+                        name="email">
                     <label for="email_address">Email address</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="phone_number" placeholder="name@example.com" name="phone">
+                    <input type="email" class="form-control" id="phone_number" placeholder="name@example.com"
+                        name="phone">
                     <label for="phone_number">Phone number</label>
                 </div>
                 <div class="form-floating">
@@ -78,38 +80,38 @@
     </section>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class=" footer_site container text-light ">
+        <section class="  container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño Gráfico</h4>
+                        <li><a href="">Creación de folletos y volantes.</a></li>
+                        <li><a href="">Ilustraciones personalizadas.</a></li>
+                        <li><a href="">Diseño de packaging y etiquetas.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Identidad de Marca</h4>
+                        <li><a href="">Definición de la paleta de colores corporativos.</a></li>
+                        <li><a href="">Selección de tipografías y estilos de texto.</a></li>
+                        <li><a href="">Creación de elementos visuales coherentes, como iconografía y patrones.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Interfaces de Usuario (UI)</h4>
+                        <li><a href="">Creación de diseños de interfaces intuitivos y atractivos.</a></li>
+                        <li><a href="">Prototipado de interfaces para pruebas y validación de conceptos.</a></li>
+                        <li><a href="">Implementación de principios de diseño centrados en el usuario.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3 ">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Experiencia de Usuario (UX)</h4>
+                        <li><a href="">Mapas de experiencia de usuario.</a></li>
+                        <li><a href="">Diseño de arquitectura de la información.</a></li>
+                        <li><a href="">Evaluación de la usabilidad y pruebas de usuario.</a></li>
                     </ul>
                 </div>
             </div>
