--- a/pages/service_name.html
+++ b/pages/service_name.html
@@ -8,17 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Prentrega 2-Services_name</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 
 <body>
     <!-- Navbar-->
     <header>
-        <nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/images/logo.png" alt="Bootstrap" >
+                    <img src="../assets/images/logo.png" alt="Bootstrap">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -47,7 +47,7 @@
     <section class="container">
         <div class="row justify-conter-center align-items-center">
             <div class="col-md-12">
-                <h1>Lorem Ipsum</h1>
+                <h1>Servicios Web</h1>
             </div>
         </div>
 
@@ -59,15 +59,23 @@
                     <img src="https://storage.googleapis.com/cms-storage-bucket/a667e994fc2f3e85de36.png" alt="Fast">
                 </video>
                 <div class="col-sm-12">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illo?</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis error nostrum neque, natus
-                        saepe beatae sequi? Unde doloribus dignissimos veniam sed eveniet quidem necessitatibus at earum
-                        deleniti blanditiis tenetur corporis quia sapiente fugiat commodi odit dolor autem dolore ut
-                        quis corrupti odio, porro ea! Atque sapiente placeat beatae qui sunt obcaecati natus. Nemo culpa
-                        ex commodi corrupti expedita quo. Tempora ut dignissimos quis expedita inventore rerum fuga
-                        doloremque debitis mollitia dolores. Eaque nam magni inventore, quae blanditiis, odit
-                        exercitationem consequatur ad modi officia facilis incidunt. Cumque at aliquam sit, fugit,
-                        asperiores nulla alias nisi neque praesentium laborum accusantium ducimus.
+                    <h3>¿Qué contienen nuestros servicios web ?</h3>
+                    <p>Nuestros servicios web están diseñados para ofrecerte una presencia en línea impactante y
+                        efectiva. Ya sea que necesites un sitio web informativo o una tienda en línea completa, nuestro
+                        equipo de expertos en diseño y desarrollo trabajará contigo para crear una experiencia digital
+                        única. Explora nuestros servicios web, que incluyen:
+                    <ol>
+                        <li> Diseño y desarrollo de sitios web personalizados</li>
+                        <li> Desarrollo de tiendas en línea</li>
+                        <li> Optimización de motores de búsqueda (SEO)</li>
+                        <li> Diseño responsive y adaptado a dispositivos móviles</li>
+                        <li> Integración de redes sociales</li>
+                        <li> Mantenimiento y soporte continuo del sitio web</li>
+                        <li> Gestión de contenido</li>
+                        <li> Análisis y seguimiento del rendimiento del sitio web</li>
+                    </ol>
+                    Con Av creativos, puedes estar seguro de que tu presencia en línea estará en buenas manos.
+                    Contáctanos hoy para comenzar tu viaje digital.
                     </p>
                 </div>
             </div>
@@ -76,38 +84,38 @@
     </section>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class=" footer_site container text-light ">
+        <section class="  container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño Gráfico</h4>
+                        <li><a href="">Creación de folletos y volantes.</a></li>
+                        <li><a href="">Ilustraciones personalizadas.</a></li>
+                        <li><a href="">Diseño de packaging y etiquetas.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Identidad de Marca</h4>
+                        <li><a href="">Definición de la paleta de colores corporativos.</a></li>
+                        <li><a href="">Selección de tipografías y estilos de texto.</a></li>
+                        <li><a href="">Creación de elementos visuales coherentes, como iconografía y patrones.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Interfaces de Usuario (UI)</h4>
+                        <li><a href="">Creación de diseños de interfaces intuitivos y atractivos.</a></li>
+                        <li><a href="">Prototipado de interfaces para pruebas y validación de conceptos.</a></li>
+                        <li><a href="">Implementación de principios de diseño centrados en el usuario.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3 ">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Experiencia de Usuario (UX)</h4>
+                        <li><a href="">Mapas de experiencia de usuario.</a></li>
+                        <li><a href="">Diseño de arquitectura de la información.</a></li>
+                        <li><a href="">Evaluación de la usabilidad y pruebas de usuario.</a></li>
                     </ul>
                 </div>
             </div>
