--- a/pages/services.html
+++ b/pages/services.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Prentrega 2-Services</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- Navbar-->
     <header>
-        <nav class="navbar sticky-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top shadow-sm p-3 mb-5 navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../assets/images/logo.png" alt="Bootstrap">
@@ -46,29 +46,25 @@
     <section class=" container pt-3 mt-5">
         <div class=" service_info row justify-conter-center align-items-center text-center">
             <div class="col mt-3">
-                <h1> Lorem ipsum dolor sit ametsd</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sunt, illo quod quasi laborum
-                    facere nobis quibusdam. Dolores, impedit esse! Magnam reprehenderit distinctio natus quidem sint
-                    accusamus rem debitis, error a maxime ad quam nostrum veniam laborum quo delectus cupiditate
-                    corrupti optio eius itaque numquam. Ad, rem optio voluptatibus sint, magni enim atque esse ipsum vel
-                    omnis iusto ratione cum impedit maxime et quisquam illo quos nostrum quo soluta nam debitis tempora?
-                    Laboriosam voluptates, dolorum aliquam tenetur ipsum explicabo ut dignissimos quod illo unde,
-                    consequatur dolorem a. Quos praesentium veniam, eos dicta optio at odio, laborum alias, magnam odit
-                    officiis.</p>
+                <h1> Conoce nuestros servicios</h1>
+                <p>En AV creativos, ofrecemos una amplia gama de servicios de diseño para satisfacer todas tus
+                    necesidades creativas. Desde el diseño gráfico hasta el desarrollo web, estamos aquí para ayudarte a
+                    destacar en un mercado competitivo. Nuestros servicios incluyen:</p>
             </div>
         </div>
 
         <!-- Services card-->
         <section class=" card_items container mt-5 mb-5">
             <div class="row">
-                <h3>Lorem ipsum dolor sit amettt</h3>
+                <h3>Nuestros servicios</h3>
                 <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
                         <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño Gráfico:</h5>
+                            <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus ideas
+                                en imágenes impactantes y visualmente atractivas que comunicarán efectivamente tu
+                                mensaje.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -77,9 +73,9 @@
                     <div class="card">
                         <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño de Logotipos:</h5>
+                            <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
+                                logotipo diseñado a medida que refleje la esencia y los valores de tu empresa.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -88,9 +84,10 @@
                     <div class="card">
                         <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Identidad de Marca:</h5>
+                            <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
+                                tipografías, construiremos una identidad de marca cohesiva que te diferenciará en el
+                                mercado y resonará con tu audiencia.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -99,9 +96,10 @@
                     <div class="card">
                         <img src="../assets/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño de Sitios Web:</h5>
+                            <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos que no
+                                solo cautivan a los visitantes, sino que también ofrecen una experiencia de usuario
+                                intuitiva y fluida.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -110,9 +108,10 @@
                     <div class="card">
                         <img src="../assets/images/service_5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Desarrollo Web:</h5>
+                            <p class="card-text">Con nuestra experiencia en desarrollo web, creamos soluciones digitales
+                                robustas y escalables que cumplen con tus requisitos técnicos y funcionales más
+                                exigentes.</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -121,9 +120,9 @@
                     <div class="card">
                         <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño de Aplicaciones Móviles:</h5>
+                            <p class="card-text">Desde el concepto hasta la implementación, diseñamos aplicaciones
+                                móviles atractivas y fáciles de usar que...</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -132,9 +131,9 @@
                     <div class="card">
                         <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño de Interfaces de Usuario (UI):</h5>
+                            <p class="card-text"> Creamos interfaces de usuario elegantes y funcionales que optimizan la
+                                interacción entre el usuario y tu producto digital...</p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -143,9 +142,10 @@
                     <div class="card">
                         <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h5 class="card-title">Diseño de Experiencia de Usuario (UX):</h5>
+                            <p class="card-text">Enfocados en la satisfacción del usuario, diseñamos experiencias
+                                digitales que son intuitivas, eficientes y gratificantes...
+                            </p>
                             <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -155,44 +155,43 @@
     </section>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class=" footer_site container text-light ">
+        <section class="  container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño Gráfico</h4>
+                        <li><a href="">Creación de folletos y volantes.</a></li>
+                        <li><a href="">Ilustraciones personalizadas.</a></li>
+                        <li><a href="">Diseño de packaging y etiquetas.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Identidad de Marca</h4>
+                        <li><a href="">Definición de la paleta de colores corporativos.</a></li>
+                        <li><a href="">Selección de tipografías y estilos de texto.</a></li>
+                        <li><a href="">Creación de elementos visuales coherentes, como iconografía y patrones.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Interfaces de Usuario (UI)</h4>
+                        <li><a href="">Creación de diseños de interfaces intuitivos y atractivos.</a></li>
+                        <li><a href="">Prototipado de interfaces para pruebas y validación de conceptos.</a></li>
+                        <li><a href="">Implementación de principios de diseño centrados en el usuario.</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-3 ">
                     <ul class="list-inline">
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
-                        <li>Lorem, ipsum.</li>
+                        <h4>Diseño de Experiencia de Usuario (UX)</h4>
+                        <li><a href="">Mapas de experiencia de usuario.</a></li>
+                        <li><a href="">Diseño de arquitectura de la información.</a></li>
+                        <li><a href="">Evaluación de la usabilidad y pruebas de usuario.</a></li>
                     </ul>
                 </div>
             </div>
         </section>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
