entrega 3- ajustes espacios en seccion about

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,12 +45,7 @@
         </nav>
     </header>
     <Section class="container align-items-center">
-        <div class="row">
-            <div class=" container_information col-md-12">
-
-            </div>
-        </div>
-        <div class="container">
+        <div class="container general_info">
             <h1>Nosotros</h1>
             <div class="  row justify-conter-center align-items-center">
                 <div class=" hover_card p-3 col-md-6 col-sm-12">
