--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
                         <img src="./assets/images/service_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body ">
                             <h5 class="card-title">Diseño gráfico</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus ideas
+                                en imágenes impactantes y visualmente atractivas que comunicarán efectivamente tu
+                                mensaje.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -126,8 +127,8 @@
                         <img src="./assets/images/service_2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Diseño de logotipos</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
+                                logotipo diseñado a medida que refleje la esencia y los valores de tu empresa.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -137,8 +138,9 @@
                         <img src="./assets/images/service_3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Identidad de marca</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
+                                tipografías, construiremos una identidad de marca cohesiva que te diferenciará en el
+                                mercado y resonará con tu audiencia.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -148,8 +150,9 @@
                         <img src="./assets/images/service_4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Diseño de sitios web</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos que no
+                                solo cautivan a los visitantes, sino que también ofrecen una experiencia de usuario
+                                intuitiva y fluida.</p>
                             <a href="./pages/service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
                         </div>
                     </div>
@@ -174,7 +177,10 @@
                 <div class="col-md-8">
                     <div>
                         <h2>En Av creativos, nos apasiona el diseño en todas sus formas.</h2>
-                        <P>Con un equipo de talentosos diseñadores y desarrolladores, nos esforzamos por ofrecer soluciones innovadoras y creativas que superen las expectativas de nuestros clientes. Nuestra experiencia y compromiso con la excelencia nos distinguen en el campo del diseño. ¡Únete a nosotros en este viaje creativo!.</P>
+                        <P>Con un equipo de talentosos diseñadores y desarrolladores, nos esforzamos por ofrecer
+                            soluciones innovadoras y creativas que superen las expectativas de nuestros clientes.
+                            Nuestra experiencia y compromiso con la excelencia nos distinguen en el campo del diseño.
+                            ¡Únete a nosotros en este viaje creativo!.</P>
                     </div>
                 </div>
                 <div class="col-md-2"></div>
